Bug 384265. No accessible focus events fired during incremental find in an HTML <select>. r=mats, sr=neil